Updated rover registration and gnssdata receiving based on swagger model.
