# RTK_Planner/rover.py
@@ -1,6 +1,20 @@
-from flask import abort, make_response
+from flask import abort, make_response, request, jsonify
 from model import RoverTrail, Rover, rover_with_trails_schema, trail_with_rovers_schema, rover_schema
 from config import sqla
+import json
+from datetime import datetime
+
+latest_gps_data = {
+    "fix_status": "Unknown",
+    "latitude": None,
+    "longitude": None,
+    "lat_raw": None,
+    "lon_raw": None,
+    "speed": None,
+    "course": None,
+    "time_utc": None,
+    "last_update": None
+}
 
 
 def get_by_name(name):
@@ -12,17 +26,30 @@ def get_by_name(name):
 
 
 def register(mac):
-    _rover_registered = Rover.query.filter(Rover.mac == mac).one_or_none()
+    mac_dict = json.loads(mac)
+    _rover_registered = Rover.query.filter(Rover.mac == mac_dict.get("mac")).one_or_none()
 
     if _rover_registered:
         return "Rover registered", 200
     else:
-        return abort(406, "New rover registration.")
+        return abort(406, "Rover not registered.")
 
 
-def update_gps(gps_data):
-    if gps_data:
-        return "Rover registered", 201
+def update_gps(gnssdata):
+    gnssdata_dict = json.loads(gnssdata)
+    if gnssdata_dict:
+        latest_gps_data.update(gnssdata_dict)
+        latest_gps_data["last_update"] = datetime.now().strftime("%Y-%m-%d %H:%M:%S")
+        print(f"""
+        GPS Status Update:
+        Fix Status: {gnssdata_dict["fix_status"]}
+        Time (UTC): {format_utc_time(gnssdata_dict["time_utc"])}
+        Raw Coordinates: {gnssdata_dict["lat_raw"]} / {gnssdata_dict["lon_raw"]}
+        Decimal Coordinates: {gnssdata_dict["latitude"]}, {gnssdata_dict["longitude"]}
+        Speed: {gnssdata_dict["speed"]} knots
+        Course: {gnssdata_dict["course"]} degrees
+        """)
+        return "GPS Updated", 201
     else:
         return abort(406, "New rover registration.")
 
@@ -36,5 +63,5 @@ def format_utc_time(time_str):
         minute = time_str[2:4]
         second = time_str[4:6]
         return f"{hour}:{minute}:{second} UTC"
-    except Exception:
+    except:
         return time_str
